--- a/app/views/search.html
+++ b/app/views/search.html
@@ -1,6 +1,6 @@
 <div class="myContainer">
 <div class="container">
-	<!-- Search Box -->
+	<!-- Search Box with sort-by name, company or email -->
   <div class="row">
 	<span class="glyphicon glyphicon-search form-inline">
 		Search: <input ng-model="query" class="form-control">
@@ -10,21 +10,21 @@
 					<option value="email">Email</option>
 				</select>
 	</span>
-	<!-- Edit button -->
+	<!-- Edit All Entry -->
 	<span class="input-btn pull-right">
 		<button class="btn btn-info" ng-show="editable" ng-click="editable=0" aria-label="Edit">Edit All</button>
 		<button class="btn btn-info" ng-hide="editable" ng-click="editable=1; query='' " aria-label="Save">Save All</button>
 	</span>
   </div><br>
 
-	<!-- Filtering Bizcards list -->
+	<!-- Filtering Bizcards list by query filter and orderBy -->
 	<div ui-sortable ng-model="bizcards" ng-init="editable=1">
 		<p class="input-group form-control" ng-repeat="bizcard in bizcards | filter:query | orderBy:orderProp" style=" padding:5px 10px; cursor: move;">
 		  <input type="text" ng-readonly="editable" ng-model="bizcard.name" placeholder="Full Name" class="form-control">
 		  <input type="text" ng-readonly="editable" ng-model="bizcard.company" placeholder="Company Name" class="form-control">
 		  <input type="text" ng-readonly="editable" ng-model="bizcard.email" placeholder="Email" class="form-control">
 		  <input type="text" ng-readonly="editable" ng-model="bizcard.other" placeholder="No Additional Info" class="form-control">
-		  <!-- Remove button -->
+		  <!-- Remove entry -->
 		  <span class="input-group-btn"> 
 		    <button class="btn btn-danger" ng-click="removeBizcard(bizcard.name)" aria-label="Remove">Delete</button>
 		  </span>
